--- a/app/src/main/res/layout/fragment_rank_double_badminton.xml
+++ b/app/src/main/res/layout/fragment_rank_double_badminton.xml
@@ -8,16 +8,27 @@
     android:background="@color/customBackground"
     tools:context=".rank.fragments.RankDoubleBadmintonFragment">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RANK DOUBLE BADMINTON"
-        android:textSize="30dp"
-        android:textColor="@color/customBlack"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
+
+
+            <pl.droidsonroids.gif.GifImageView
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="100dp"
+                android:src="@drawable/comingsoon_animation" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
