--- a/app/src/main/res/layout/fragment_schedule_details.xml
+++ b/app/src/main/res/layout/fragment_schedule_details.xml
@@ -74,11 +74,19 @@
                             app:civ_border_width="2dp" />
                     </LinearLayout>
                     <TextView
-                        android:id="@+id/scheduleDetailsText"
+                        android:id="@+id/scheduleDetailsTimeText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="20dp"
+                        android:textAlignment="center"
+                        android:textColor="@color/customWhite"
+                        android:textSize="25dp" />
+                    <TextView
+                        android:id="@+id/scheduleDetailsPlaceText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginBottom="20dp"
                         android:textAlignment="center"
                         android:textColor="@color/customWhite"
