--- a/app/src/main/res/layout/recycle_view_rank.xml
+++ b/app/src/main/res/layout/recycle_view_rank.xml
@@ -32,7 +32,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -41,22 +41,62 @@
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:layout_weight="1"
+                        android:src="@drawable/user_icon_jpg"
                         app:civ_border_width="2dp" />
 
-                    <TextView
-                        android:id="@+id/rankListText"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:text="username\nMatch : 0\nMenang : 0"
-                        android:textColor="@color/customWhite"
-                        android:textSize="25dp" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/rankListUsernameText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginTop="10dp"
+                            android:text="username"
+                            android:textColor="@color/customWhite"
+                            android:textSize="25dp" />
+                        <TextView
+                            android:id="@+id/rankListMatchText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginLeft="20dp"
+                            android:text="Match : 0"
+                            android:textColor="@color/customWhite"
+                            android:textSize="25dp" />
+                        <TextView
+                            android:id="@+id/rankListWinText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginLeft="20dp"
+                            android:text="Menang : 0"
+                            android:textColor="@color/customWhite"
+                            android:textSize="25dp" />
+                        <TextView
+                            android:id="@+id/rankListLoseText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="20dp"
+                            android:text="Kalah : 0"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginBottom="10dp"
+                            android:textColor="@color/customWhite"
+                            android:textSize="25dp" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
