--- a/app/src/main/res/layout/fragment_menu_account.xml
+++ b/app/src/main/res/layout/fragment_menu_account.xml
@@ -102,7 +102,7 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/customFacebook"
-                    android:text="HUBUNGKAN DENGAN FACEBOOK"
+                    android:text=""
                     android:layout_gravity="center"
                     android:textColor="@color/customWhite"
                     app:cornerRadius="10dp"
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/customGoogle"
-                android:text="HUBUNGKAN DENGAN GOOGLE"
+                android:text=""
                 android:textColor="@color/customWhite"
                 app:cornerRadius="10dp"
                 app:icon="@drawable/ic_icons8_google"
